--- a/CapRenManager/CapRenManager/App.config
+++ b/CapRenManager/CapRenManager/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="CapRenManager.Properties.Settings.connectDB" connectionString="datasource=127.0.0.1;port=3306;username=root;password=root;database=caprepsalesdatabase;" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
