FEAT: Organization of code in ucSalesRegister

--- a/CapRenManager/CapRenManager/CapRenManager.csproj
+++ b/CapRenManager/CapRenManager/CapRenManager.csproj
@@ -92,8 +92,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB\cDBRegisterService.cs" />
-    <Compile Include="DocCreator\cDocCreator.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +134,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DB\" />
+    <Folder Include="DocCreator\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
