WIP: Work in progress

--- a/CapRenManager/CapRenManager/App.config
+++ b/CapRenManager/CapRenManager/App.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="CapRenManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
         <add name="CapRenManager.Properties.Settings.connectDB" connectionString="datasource=127.0.0.1;port=3306;username=root;password=root;database=caprepsalesdatabase;" />
@@ -20,4 +23,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <CapRenManager.Properties.Settings>
+      <setting name="password" serializeAs="String">
+        <value>password</value>
+      </setting>
+    </CapRenManager.Properties.Settings>
+  </applicationSettings>
 </configuration>
