--- a/CapRenManager/CapRenManager/Properties/Settings.settings
+++ b/CapRenManager/CapRenManager/Properties/Settings.settings
@@ -9,5 +9,8 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">datasource=127.0.0.1;port=3306;username=root;password=root;database=caprepsalesdatabase;</Value>
     </Setting>
+    <Setting Name="password" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">password</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
